--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,7 +50,8 @@ dependencies {
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    testImplementation 'junit:junit:4.+'
+    implementation 'androidx.test.ext:junit-ktx:1.1.3'
+    testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
@@ -76,6 +77,15 @@ dependencies {
     implementation 'com.google.android.gms:play-services-location:18.0.0'
 
     implementation 'com.android.support:multidex:1.0.3'
+
+    def androidx_test_version = "1.4.0"
+    androidTestImplementation "androidx.test:runner:$androidx_test_version"
+    androidTestImplementation "androidx.test:core-ktx:$androidx_test_version"
+
+    // required if you want to use Mockito for unit tests
+    testImplementation 'org.mockito:mockito-core:3.4.6'
+    testImplementation 'android.arch.core:core-testing:1.1.1'
+
     //implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     //implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
 }
