--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,7 +40,8 @@ android {
     }
 
     buildFeatures {
-        viewBinding = true
+        viewBinding true
+        dataBinding true
     }
 }
 
